# api-book-part-two

./: pyproject.toml
chapter10/: chapter10notes.ipynb
chapter8/: chapter8notes.ipynb  locustfile.py
chapter9/complete/notebooks/: chapter9notes.ipynb  shark_league_notebook.ipynb  swc_simple_client.py
