[project]
name = "api-book-part-two"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "eralchemy2>=1.4.1",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.2.0",
    "jupytext>=1.16.7",
    "lab>=8.4",
    "locust>=2.42.6",
    "logging>=0.4.9.6",
    "openapi-python-client>=0.28.0",
    "pandas>=2.3.3",
    "pyarrow<20",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "scipy>=1.15.2",
    "sqlacodegen>=3.2.0",
    "sqlalchemy>=2.0.39",
    "sqlite3-api>=2.0.4",
    "swcpy-doolingdavidrs21>=0.0.4",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = false


